--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,10 @@ body {
     text-align: center;
     padding-bottom: 20px;
     border-bottom: 2px solid #0072bc;
+    display: flex;
+    
+    
+    justify-content: space-around;
 }
 
 .header img {
